# whisper.cpp

examples/stream/: CMakeLists.txt  stream.cpp
